# cinderella

./: .gitmodules  README.md  cinderella_loop_witness.py  constraint.py  executor.py  game.py  polyhorn_config.json  pyproject.toml  rank_remain_witness.py  run_all.sh  run_all.txt  t.py  transition.py  util.py  witness.py
configs/: farkas-mathsat-nosat.json  farkas-mathsat.json  farkas-z3-unsat.json  farkas-z3.json  handelman-mathsat.json  handelman-z3.json  putinar-mathsat.json  putinar-z3-sat.json  putinar-z3.json
fst/: nondet_loop.fst
other_benchmarks/gensys/: 10_cinderella_l2_variable_eps.py  11_robot_cocktail.py  1_cinderella_reach_15.py  2_cinderella_reach_17.py  3_cinderella_reach_19.py  4_cinderella_reach_small_eps.py  5_cinderella_variable_eps.py  6_cinderella_l2_15.py  7_cinderella_l2_17.py  8_cinderella_l2_19.py  9_cinderella_l2_small_eps.py
other_benchmarks/rpgsolve/: cinderella-15.rpg  cinderella-17.rpg  cinderella-19.rpg  cinderella-l2-15.rpg  cinderella-l2-17.rpg  cinderella-l2-19.rpg  cinderella-l2-small_eps.rpg  cinderella-small_eps.rpg
prefix_parser/: parser.py
programs/: __init__.py  cinderella.py  nondet_loop.py  program.py
src/cinderella/: __init__.py  constraint.py  executor.py  linearity_checker.py  template.py  util.py
src/cinderella/benchmarks/: cinderella_15.py  cinderella_17.py  cinderella_19.py  cinderella_l2_15.py  cinderella_l2_17.py  cinderella_l2_19.py  cinderella_l2_small_eps.py  cinderella_l2_vareps.py  cinderella_small_eps.py  cinderella_vareps.py  robot_cocktail.py
src/cinderella/prefix_parser/: parsetab.py
(+16 files in other folders)
