[project]
name = "cinderella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "ply>=3.11",
    "polyqent",
    "regex>=2024.11.6",
    "sympy>=1.13.3",
]

[tool.uv.sources]
polyqent = { git = "https://github.com/ChatterjeeGroup-ISTA/polyqent.git", rev = "dev" }
