[project]
name = "cinderella"
version = "0.1.0"
description = "Synthesizing witness functions for two player games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "ply>=3.11",
    "polyqent",
    "regex>=2024.11.6",
    "ruff>=0.12.5",
    "sympy>=1.13.3",
]

[tool.uv.sources]
polyqent = { git = "https://github.com/ChatterjeeGroup-ISTA/polyqent.git", rev = "dev" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
